# cloudgame

./: .gitattributes  .gitignore  LICENSE  README.md
CMDRelayService/: cmdrelayservice.cpp  inputcmd.proto
client/CloudRender/: CloudRender.cpp  CloudRender.h  CloudRender.qrc  CloudRender.sln  CloudRender.ui  decoder.yuv
client/CloudRender/src/: main.cpp  mainwindow.cpp  mainwindow.h  stdafx.h
client/CloudRender/src/net/: tcplink.cpp  tcplink.h
client/CloudRender/src/proto/: inputcmd.pb.h
client/CloudRender/src/video/: yangrecordthread.cpp  yangrecordthread.h
client/CloudRender/src/yangplayer/: AppTestFileWriter.cpp  AppTestFileWriter.h  OpenGLPlayer.cpp  OpenGLPlayer.h  YangPlayWidget.cpp  YangPlayWidget.h  YangPlayerPlay.cpp  YangRtcReceive.cpp  YangRtcReceive.h  YangYuvPlayWidget.cpp  YangYuvPlayWidget.h
renderbase/: renderbase.cpp
renderbase/common/: config.h  config_win.h
renderbase/log/: logger.cpp  logger.h  logqueue.cpp  logqueue.h  logutil.cpp  logutil.h  logwriter.cpp  logwriter.h
renderbase/util/: jsonutil.cpp  jsonutil.h  stringformat.cpp  stringformat.h
renderproxy/: renderproxy.sln
renderproxy/src/: renderproxy.cpp
renderproxy/src/http/: httphandler.cpp  httphandler.h
renderproxy/src/proto/: inputcmd.pb.cc
renderproxy/src/tcp/: tcpdatahandler.cpp  tcpdatahandler.h  tcpserver.cpp  tcpserver.h  tcpsession.cpp  tcpsession.h
renderproxy/src/util/: commonutils.cpp  commonutils.h
screenrecordingservice/src/: main.cpp  recordmainwindow.cpp  screenrecordingservice.pro
screenrecordingservice/src/video/: YangPlayWidget.cpp  YangPlayWidget.h
screenrecordingservice/src/yangpush/: YangPushCapture.cpp  YangPushFactory.cpp  YangPushHandleImpl.cpp  YangPushHandleImpl.h  YangPushMessageHandle.h  YangPushPublish.cpp  YangRtcPublish.cpp  YangSendVideoImpl.cpp  YangSendVideoImpl.h
test/KeyPlayBackTest/: KeyPlayBackTest.cpp  KeyPlayBackTest.sln
test/TCPTest/: TCPTest.cpp  TCPTest.sln
test/inputcmdtest/: CMakeLists.txt  Main.qml  inputcmd.pb.cc  inputcmd.pb.h  inputcmd.proto  main.cpp  singleton.h  tcplink.cpp  tcplink.h
